# mantra-dex

./: .gitignore  Cargo.toml  LICENSE  PROTOCOL_TESTS_ANALYSIS.md  README.md  TEST_CONSTANTS_REFACTORING.md  TOP_10_TEST_RESULTS.md  TOP_14_TEST_RESULTS.md  diff.txt  justfile  package-lock.json  package.json  run_top14_tests.sh  stableswap-1.py  stableswap.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_bug.md  2_improvement.md  3_feature_request.md  4_infrastructure.md  5_protocol.md  config.yml
.github/workflows/: ci-test-lints.yaml  pr-convcom-check.yaml  release-artifacts-on-tag.yaml
contracts/epoch-manager/: Cargo.toml  README.md
contracts/epoch-manager/schema/: epoch-manager.json
contracts/epoch-manager/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_epoch.json
contracts/epoch-manager/src/: commands.rs  contract.rs  error.rs  queries.rs  state.rs
contracts/epoch-manager/tests/: common.rs  config.rs  epoch.rs  hooks.rs  instantiate.rs
contracts/farm-manager/: Cargo.toml
contracts/farm-manager/schema/: farm-manager.json
contracts/farm-manager/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_farms.json  response_to_lp_weight.json  response_to_positions.json  response_to_rewards.json
contracts/farm-manager/src/: contract.rs  error.rs  helpers.rs  queries.rs  state.rs
contracts/farm-manager/src/farm/: commands.rs
contracts/farm-manager/src/farm/tests/: rewards.rs
contracts/farm-manager/src/manager/: commands.rs
contracts/farm-manager/src/position/: commands.rs  helpers.rs
contracts/farm-manager/tests/: integration.rs  new_test_structure.md
contracts/farm-manager/tests/common/: mod.rs  suite.rs  suite_contracts.rs
contracts/farm-manager/tests/integration/: common_constants.rs  complex_scenarios.rs  emergency_withdrawal.rs  error_handling.rs  expiration.rs  farm_creation.rs  farm_management.rs  instantiation.rs  mod.rs  ownership_and_config.rs  position_management.rs  queries.rs  reward_claiming.rs
contracts/fee-collector/: Cargo.toml  README.md
contracts/fee-collector/.cargo/: config.toml
contracts/fee-collector/schema/: fee-collector.json
contracts/fee-collector/schema/raw/: execute.json  query.json
contracts/fee-collector/src/: contract.rs
contracts/fee-collector/tests/: integration.rs
contracts/incentive-manager/: Cargo.toml  README.md
contracts/incentive-manager/src/: contract.rs  queries.rs  state.rs
contracts/incentive-manager/src/incentive/: commands.rs
contracts/incentive-manager/src/incentive/tests/: rewards.rs
contracts/incentive-manager/src/manager/: commands.rs
contracts/incentive-manager/src/position/: helpers.rs
contracts/incentive-manager/tests/: integration.rs
contracts/incentive-manager/tests/common/: suite.rs  suite_contracts.rs
contracts/liquidity_hub/epoch-manager/: Cargo.toml
contracts/liquidity_hub/epoch-manager/src/: commands.rs  contract.rs  state.rs
contracts/liquidity_hub/epoch-manager/tests/: common.rs  config.rs  epoch.rs  hooks.rs  instantiate.rs
contracts/liquidity_hub/incentive-manager/: Cargo.toml
contracts/liquidity_hub/incentive-manager/src/: contract.rs  error.rs  helpers.rs  queries.rs
contracts/liquidity_hub/incentive-manager/src/manager/: commands.rs
contracts/liquidity_hub/incentive-manager/tests/: integration.rs
contracts/liquidity_hub/pool-manager/: Cargo.toml
contracts/liquidity_hub/pool-manager/schema/: pool-manager.json
contracts/liquidity_hub/pool-manager/schema/raw/: execute.json  instantiate.json  query.json  response_to_swap_routes.json
contracts/liquidity_hub/pool-manager/src/: contract.rs  error.rs  helpers.rs  queries.rs  state.rs
contracts/liquidity_hub/pool-manager/src/liquidity/: commands.rs
contracts/liquidity_hub/pool-manager/src/manager/: commands.rs  update_config.rs
contracts/liquidity_hub/pool-manager/src/router/: commands.rs
contracts/liquidity_hub/pool-manager/src/swap/: commands.rs  perform_swap.rs
contracts/liquidity_hub/pool-manager/src/tests/: integration_tests.rs  suite.rs
contracts/pool-manager/: Cargo.toml  README.md
contracts/pool-manager/schema/: pool-manager.json
contracts/pool-manager/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_pools.json  response_to_reverse_simulate_swap_operations.json  response_to_reverse_simulation.json  response_to_simulate_swap_operations.json  response_to_simulation.json  response_to_swap_route.json
contracts/pool-manager/sim/: Cargo.toml  lp_fee.py  stableswap.py
contracts/pool-manager/sim/src/: lib.rs
contracts/pool-manager/src/: contract.rs  error.rs  helpers.rs  lib.rs  math.rs  migrations.rs  queries.rs  state.rs
contracts/pool-manager/src/liquidity/: commands.rs
contracts/pool-manager/src/manager/: commands.rs  update_config.rs
contracts/pool-manager/src/router/: commands.rs
contracts/pool-manager/src/swap/: commands.rs  perform_swap.rs
contracts/pool-manager/src/tests/: integration_tests.rs  mod.rs  single_sided_lp_tests.rs  suite.rs  unused_constants.md
contracts/pool-manager/src/tests/integration/: basic_tests.rs  common_constants.rs  helpers.rs  mod.rs  ownership.rs  pool_management.rs  query.rs  router.rs  swap.rs
contracts/pool-manager/src/tests/integration/lp_actions/: basic_lp.rs  locking.rs  mod.rs  shares_calculation.rs  single_asset.rs  slippage_and_fees.rs  stableswap.rs  stableswap_lp.py  test_provide_liquidity.rs
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
docs/tasks/: refactor-swap-rs-constants.md
scripts/: get_artifacts_versions.sh
scripts/deployment/: deploy_mantra_dex.sh  deploy_pool.sh  deploy_v2.sh  wallet_importer.sh
scripts/deployment/deploy_env/: base_env.sh
scripts/deployment/deploy_env/testnets/: mantra.env
scripts/emergency/: README.md  close_farms.js  toggle_pool_features.js  toggle_pool_features.sh
test-utils/: Cargo.toml
test-utils/src/: common_constants.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+3 files in other folders)
