[workspace]
resolver = "2"

members = [
  "packages/*",
  "contracts/pool-manager",
  "contracts/epoch-manager",
  "contracts/farm-manager",
  "contracts/fee-collector",
  "xtask",
]

[workspace.package]
edition = "2021"
homepage = "https://mantra.zone"
documentation = ""
license = "MIT"
repository = "https://github.com/MANTRA-Finance/amm"
publish = false
authors = ["MANTRA Finance"]

[workspace.dependencies]
cosmwasm-schema = { version = "1.5.4" }
cosmwasm-std = { version = "1.5.4", features = [
  "iterator",
  "cosmwasm_1_2",
  "stargate",
] }
cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.1.0", features = ["library"] }
cw-storage-plus = { version = "1.1.0" }
cw-utils = { version = "1.0.1" }
schemars = { version = "0.8.12" }
semver = { version = "1.0.12" }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.127" }
thiserror = { version = "1.0.43" }
osmosis-std-derive = { version = "0.15.3" }
prost-types = { version = "0.11.9", default-features = false }
amm = { path = "packages/amm" }
mantra-utils = { path = "packages/utils" }
white-whale-std = { version = "2.0.0-alpha.1" }
common-testing = { path = "packages/common-testing" }
cw-multi-test = { version = "0.20.0", features = ["cosmwasm_1_2"] }
uint = { version = "0.9.5" }
integer-sqrt = { version = "0.1.5" }
anyhow = { version = "1.0.71" }
cw-controllers = { version = "1.1.0" }
cw-ownable = { version = "0.5.1" }
anybuf = { version = "0.4.0" }
sha2 = { version = "=0.10.8" }
sha256 = { version = "1.4.0" }
protobuf = { version = "=3.2.0", features = ["with-bytes"] }
prost = { version = "0.11.9", default-features = false, features = [
  "prost-derive",
] }
test-case = { version = "3.3.1" }
cw-migrate-error-derive = { version = "0.1.0" }
proptest = { version = "1.5.0" }
rand = { version = "0.8.5" }

# contracts
epoch-manager = { path = "contracts/epoch-manager" }
pool-manager = { path = "contracts/pool-manager" }
farm-manager = { path = "contracts/farm-manager" }
fee-collector = { path = "contracts/fee-collector" }

[workspace.metadata.dylint]
libraries = [{ git = "https://github.com/0xFable/cw-lint" }]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
