[package]
authors                 = ["Kerber0x <kerber0x@protonmail.com>"]
description             = "The Farm Manager is a contract that allows to manage multiple pool farms in a single contract."
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "farm-manager"
publish.workspace       = true
repository.workspace    = true
version                 = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema.workspace         = true
cosmwasm-std.workspace            = true
cw-migrate-error-derive.workspace = true
cw-ownable.workspace              = true
cw-storage-plus.workspace         = true
cw-utils.workspace                = true
cw2.workspace                     = true
mantra-dex-std.workspace          = true
mantra-utils.workspace            = true
schemars.workspace                = true
semver.workspace                  = true
serde.workspace                   = true
thiserror.workspace               = true

[dev-dependencies]
anyhow.workspace                = true
cw-multi-test.workspace         = true
epoch-manager.workspace         = true
fee-collector.workspace         = true
mantra-common-testing.workspace = true
pool-manager.workspace          = true
test-utils                      = { path = "../../test-utils" }
