[package]
authors                 = ["0xFable <0xfable@protonmail.com>", "kaimen-sano <kaimen_sano@protonmail.com>"]
description             = "The Pool Manager is a contract that allows to manage multiple pools in a single contract."
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license.workspace       = true
name                    = "pool-manager"
publish.workspace       = true
repository.workspace    = true
version                 = "1.3.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema.workspace         = true
cosmwasm-std.workspace            = true
cw-migrate-error-derive.workspace = true
cw-ownable.workspace              = true
cw-storage-plus.workspace         = true
cw-utils.workspace                = true
cw2.workspace                     = true
mantra-dex-std.workspace          = true
mantra-utils.workspace            = true
semver.workspace                  = true
serde.workspace                   = true
sha2.workspace                    = true
thiserror.workspace               = true

[dev-dependencies]
anyhow.workspace                = true
cw-multi-test.workspace         = true
epoch-manager.workspace         = true
farm-manager.workspace          = true
fee-collector.workspace         = true
mantra-common-testing.workspace = true
proptest.workspace              = true
rand.workspace                  = true
stable-swap-sim                 = { path = "sim", version = "^0.1" }
test-case.workspace             = true
test-utils                      = { path = "../../test-utils" }
