[package]
authors     = ["Paul Stelzig paul@irulast.com>"]
description = "Simulations of the StableSwap invariant compared to Curve's reference implementation."
edition     = "2021"
name        = "stable-swap-sim"
version     = "0.1.0"

[lib]
name = "sim"

[dependencies]
pyo3 = { version = "0.17.3", features = ["auto-initialize"] }
